--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,51 @@
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+* {
+  margin:0px auto ;
+}
+
+
+body {
+  background: linear-gradient(-225deg, #A445B2 0%, #61dafb 100%);
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  
+}
+
+.main{
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+ 
+}
+
+.header{
+  color: #333;
+  padding: 10px;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 .winner{
   color:green;
   font-size: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px;
   
+}
+
+
+.winner button{
+  background-color: yellowgreen;
+  border-radius: 10px;
+  padding: 10px;
+  font-weight: bold;
+  margin: 10px;
 }
