--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,12 @@ html {
 
 
 body {
-  background: linear-gradient(-225deg, #A445B2 0%, #61dafb 100%);
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background: #61dafb;
+  min-height: 100%;
+  padding-bottom: 5rem;
   width: 100%;
   display: flex;
   align-items: flex-start;
