--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,11 @@ body {
   font-weight: bold;
   margin: 10px;
 }
+.button:hover{
+  background-color: rgb(12, 204, 12);
+ 
+}
+
 
 .jokes-container{
   display: flex;
